--- a/.gitignore
+++ b/.gitignore
@@ -20,12 +20,9 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-dapnet_api-*.tar
+dapnet-*.tar
 
 # Since we are building assets from assets/,
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
-
-/log/
-Mnesia.*/
